# SnakeGame

./: .gitignore  CMakeLists.txt  README.md  SnakeGame.cpp  SnakeGame.h  main.cpp
Input/: IInputActions.h  ReversedSnakeGameInputActions.cpp  ReversedSnakeGameInputActions.h  UserInput.cpp  UserInput.h
Output/: ConsoleOutput.cpp  ConsoleOutput.h
Utilities/: SingleDimensionArraysUtils.cpp  SingleDimensionArraysUtils.h  Vector2.cpp  Vector2.h
